--- a/SysExLibrarian/App.config
+++ b/SysExLibrarian/App.config
@@ -1,18 +1,26 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <configSections>
-    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-      <section name="SysExLibrarian.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-    </sectionGroup>
-  </configSections>
-  <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
-  </startup>
-  <userSettings>
-    <SysExLibrarian.Properties.Settings>
-      <setting name="SysExLibrarianFolder" serializeAs="String">
-        <value />
-      </setting>
-    </SysExLibrarian.Properties.Settings>
-  </userSettings>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="SysExLibrarian.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
+    <startup>
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+    </startup>
+    <userSettings>
+        <SysExLibrarian.Properties.Settings>
+            <setting name="SysExLibrarianFolder" serializeAs="String">
+                <value />
+            </setting>
+        </SysExLibrarian.Properties.Settings>
+    </userSettings>
+    <!--<system.diagnostics>
+        <trace autoflush="true" indentsize="4">
+            <listeners>
+                <remove name="Default" />
+                <add name="debugLogListener" type="System.Diagnostics.TextWriterTraceListener" initializeData="debug.log" traceOutputOptions="DateTime" />
+            </listeners>
+        </trace>
+    </system.diagnostics>-->
 </configuration>
