--- a/SysExLibrarian/packages.config
+++ b/SysExLibrarian/packages.config
@@ -4,4 +4,6 @@
   <package id="MaterialDesignColors" version="1.1.3" targetFramework="net452" />
   <package id="MaterialDesignThemes" version="2.2.0-ci683" targetFramework="net452" />
   <package id="Sanford.Multimedia.Midi" version="6.1.2" targetFramework="net452" />
+  <package id="Serilog" version="2.2.0" targetFramework="net452" />
+  <package id="Serilog.Sinks.File" version="3.0.1" targetFramework="net452" />
 </packages>
